# ssc

./: .clang-format  .devcontainer.json  .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeLists.txt  Copyright.txt  Dockerfile  Dockerfile.vscode.devcontainer  LICENSE.md  Makefile  Makefile.hom  Makefile.lnx  Makefile.mk  Makefile.w32  Readme.md  codecov.yaml  docker_build.sh  externalDependencies.txt  fetch_gitlab_artifacts.py  ssc-config-version.cmake.in
csv_file_reader/: CMakeLists.txt
csv_file_reader/inc/: CSVFileReader.hpp
csv_file_reader/src/: CSVFileReader.cpp
csv_file_reader/unit_tests/: CMakeLists.txt
data_source/: CMakeLists.txt
data_source/inc/: CoercionException.hpp  DataSource.hpp  DataSourceDrawer.hpp  DataSourceException.hpp  DataSourceModule.hpp  DataSourceSerializer.hpp  Parameter.hpp  PhysicalQuantity.hpp  SignalContainer.hpp  SignalContainerTypeLists.hpp  TypeCoercion.hpp  almost_equal.hpp
data_source/src/: DataSource.cpp  DataSourceDrawer.cpp  DataSourceModule.cpp  DataSourceSerializer.cpp  PhysicalQuantity.cpp  SignalContainer.cpp  SignalContainerTypeLists.cpp  TypeCoercion.cpp  almost_equal.cpp
data_source/unit_tests/: CMakeLists.txt
decode_unit/: CMakeLists.txt  Makefile.hom  Makefile.inc  Makefile.lnx  Makefile.mk  Makefile.w32  test_tridiagonal.cpp
decode_unit/include/: DecodeUnit.h
decode_unit/source/: DecodeUnit.cpp
decode_unit/test/: Makefile.lnx
exception_handling/: CMakeLists.txt
exception_handling/inc/: Exception.hpp
exception_handling/src/: Exception.cpp
interpolation/: CMakeLists.txt
interpolation/inc/: ConstantStepInterpolator.hpp  CubicRunoutSplines.hpp  IndexFinder.hpp  Interpolator.hpp  InterpolatorException.hpp  LinearInterpolation.hpp  LinearInterpolationVariableStep.hpp  NaturalSplines.hpp  ParabolicCoefficients.hpp  ParabolicInterpolation.hpp  ParabolicInterpolationException.hpp  ParabolicRunoutSplines.hpp  PiecewiseConstant.hpp  PiecewiseConstantException.hpp  PiecewiseConstantVariableStep.hpp  SplineVariableStep.hpp  Splines.hpp  SplinesException.hpp  TwoDimensionalInterpolation.hpp  VariableStepInterpolation.hpp  VectorOfEquallySpacedNumbers.hpp  VectorOfEquallySpacedNumbersException.hpp
interpolation/src/: ConstantStepInterpolator.cpp  CubicRunoutSplines.cpp  IndexFinder.cpp  Interpolator.cpp  LinearInterpolation.cpp  LinearInterpolationVariableStep.cpp  NaturalSplines.cpp  ParabolicCoefficients.cpp  ParabolicInterpolation.cpp  ParabolicRunoutSplines.cpp  PiecewiseConstant.cpp  SplineVariableStep.cpp  Splines.cpp  TwoDimensionalInterpolation.cpp  VariableStepInterpolation.cpp  VectorOfEquallySpacedNumbers.cpp  cubspl.f
interpolation/unit_tests/: CMakeLists.txt
random_data_generator/: CMakeLists.txt  Makefile.hom  Makefile.inc  Makefile.lnx  Makefile.mk  Makefile.w32
random_data_generator/inc/: DataGenerator.hpp
random_data_generator/src/: DataGenerator.cpp  sir_rand.c
random_data_generator/unit_tests/: CMakeLists.txt  Makefile.hom  Makefile.inc  Makefile.lnx  Makefile.mk  Makefile.w32
ssc/: .dockerignore  .gitignore  CMakeLists.txt  CMakeLists_f2c.txt  CMakeLists_geographiclib.txt  CMakeLists_yaml_cpp.txt  Copyright.txt  Copyright.txt.in  Dockerfile  Doxyfile.in  Vagrantfile  bootstrap.sh  convert_thin_archive_to_normal_one.mri  copyright_notice.txt  csv_file_reader.hpp.in  data_source.hpp.in  decode_unit.hpp.in  description.txt  docker_build.sh  exception_handling.hpp.in  externalDependencies.txt  geometry.hpp.in  install.sh  interpolation.hpp.in  kinematics.hpp.in  linux_build.sh  macros.hpp.in  mingw_build.sh  numeric.hpp.in  random_data_generator.hpp.in  read_me.txt  solver.hpp.in  ssc-config.cmake.in  svn_export.sh  text_file_reader.hpp.in  todo.txt  yaml_parser.hpp.in
ssc/cmake/: CMakeCompilationOptions.cmake  CMakeGMock.cmake  CMakeMacros.cmake  CMakePack.cmake  FindIPOPT.cmake  FindLcov.cmake  GetGitRevisionDescription.cmake  fixup_deb.sh.in  prerm.in
ssc/csv_file_reader/: CMakeLists.txt  CSVFileReader.cpp  CSVFileReader.hpp
ssc/csv_writer/: CMakeLists.txt  CSVWriter.cpp  CSVWriter.hpp  ConvertNumericToString.hpp
ssc/data_source/: CMakeLists.txt  CoercionException.hpp  DataSource.cpp  DataSource.hpp  DataSourceDrawer.cpp  DataSourceDrawer.hpp  DataSourceException.hpp  DataSourceModule.cpp  DataSourceModule.hpp  Parameter.hpp  PhysicalQuantity.cpp  PhysicalQuantity.hpp  SignalContainer.cpp  SignalContainer.hpp  SignalContainerTypeLists.cpp  SignalContainerTypeLists.hpp  TypeCoercion.cpp  TypeCoercion.hpp  module_documentation.txt
ssc/decode_unit/: CMakeLists.txt  DecodeUnit.cpp  DecodeUnit.h
ssc/doc/: overview.md
ssc/exception_handling/: CMakeLists.txt  Exception.cpp  Exception.hpp
ssc/functional_programming/: CMakeLists.txt
ssc/functors_for_optimizer/: Abs.cpp  Abs.hpp  Binary.cpp  Binary.hpp  CMakeLists.txt  Constant.cpp  Constant.hpp  Cos.cpp  Cos.hpp  Difference.cpp  Difference.hpp  Divide.cpp  Divide.hpp  FunctionMatrix.cpp  FunctionMatrix.hpp  FunctorAlgebra.cpp  FunctorAlgebra.hpp  Fx.cpp  Fx.hpp  Grad.cpp  Grad.hpp  GradHes.cpp  GradHes.hpp  IfPositive.cpp  IfPositive.hpp  LinearInterpolator.cpp  Ln.cpp  Ln.hpp  Multiply.cpp  Multiply.hpp  N_ary.cpp  N_ary.hpp  Node.cpp  Node.hpp  NodeVisitor.hpp  Null.cpp  Null.hpp  Nullary.cpp  Nullary.hpp  Parameter.cpp  (+41 more)
ssc/geometry/: Angle.cpp  Angle.cxx  Angle.h  Angle.hpp  CMakeLists.txt  ConstantAzimuthLeg.cpp  ConstantAzimuthLeg.hpp  ConstantAzimuthLegChain.cpp  ConstantAzimuthLegChain.hpp  Geometry.cpp  Geometry.h  GreatCircle.cpp  GreatCircle.h  LatitudeLongitude.cpp  LatitudeLongitude.hpp  Leg.cpp  Leg.hpp  LegChain.cpp  LegChain.hpp  LongitudeLatitude.cpp  PointInCartesianPolygon.cpp  PointInCartesianPolygon.hpp  PointInGeographicalPolygon.cpp  PointInGeographicalPolygon.hpp  PointInPolygon.cpp  PointInPolygon.hpp  PointInPolygonPimpl.hpp  PointInSphericalPolygon.cpp  PointInSphericalPolygon.hpp  ShortestPathLeg.cpp  ShortestPathLeg.hpp  ShortestPathLegChain.cpp  ShortestPathLegChain.hpp  Track.cpp  Track.hpp  Vector3D.cpp  (+7 more)
text_file_reader/: CMakeLists.txt
yaml_parser/: CMakeLists.txt
(+844 files in other folders)
